@@ -1,7 +1,8 @@
-2010-08-21 Andreas Radke <andyrtr at archlinux.org>
+2010-09-01 Andreas Radke <andyrtr at archlinux.org>
 
-        * 3.3.0-OOO330_m5-1 :
+        * 3.3.0-OOO330_m6-1 :
 	- new snapshot
+	- move addional sources into src array for clean chroot builds
 	- drop buildfix patch
 	- rework deps for clean builds
 	- remove some obsolete configure options
